--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 micronaut:
   application:
     name: expenses
-  security:
-    authentication: bearer
-    token:
-      jwt:
-        signatures:
-          secret:
-            generator:
-              secret: ${JWT_GENERATOR_SIGNATURE_SECRET:pleaseChangeThisSecretForANewOne}
+#  security:
+#    authentication: bearer
+#    token:
+#      jwt:
+#        signatures:
+#          secret:
+#            generator:
+#              secret: ${JWT_GENERATOR_SIGNATURE_SECRET:pleaseChangeThisSecretForANewOne}
   router:
     static-resources:
       swagger:
@@ -17,24 +17,27 @@ micronaut:
       rapidoc:
         paths: classpath:META-INF/swagger/views/rapidoc
         mapping: /rapidoc/**
-  vertx:
-    mysql:
-      client:
-        port: 3306
-        host: the-host
-        database: the-db
-        user: user
-        password: password
-        maxSize: 5
-  jpa:
-    default:
-      properties:
-        hibernate:
-          hbm2ddl:
-            auto: update
-          connection:
-            db-type: mysql
-            url: jdbc:mariadb://localhost:3306/db
-            username: root
-            password: ""
-      reactive: true
+datasources:
+  default:
+    url: jdbc:h2:mem:devDb
+    username: sa
+    password: ''
+    schema-generate: CREATE_DROP
+    driver-class-name: org.h2.Driver
+    dialect: H2
+#flyway:
+#  datasources:
+#    default:
+#      enabled: true
+jpa:
+  default:
+    entity-scan:
+      packages:
+        - 'me.jvegaf.user.domain'
+        - 'me.jvegaf.group.domain'
+        - 'me.jvegaf.expense.domain'
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: update
+        show_sql: true
