--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "start:mock": "ng serve --configuration mock",
+    "start": "ng serve --configuration development",
+    "mock": "json-server --watch db.json --port 3000",
+    "dev": "concurrently --kill-others \"npm run start\" \"npm run mock\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -28,6 +29,7 @@
     "@angular/cli": "^17.2.2",
     "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
+    "concurrently": "^8.2.2",
     "jasmine-core": "~5.1.0",
     "json-server": "^1.0.0-alpha.23",
     "karma": "~6.4.0",
