--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -2,13 +2,11 @@ version: "3"
 
 services:
   db:
-    image: mariadb
+    image: mariadb:10.3
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: example_root_password
-      MYSQL_DATABASE: example_database
-      MYSQL_USER: example_user
-      MYSQL_PASSWORD: example_password
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: db
     ports:
       - "3306:3306"
     volumes:
