--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -11,12 +11,19 @@ micronaut:
         mapping: /rapidoc/**
 datasources:
   default:
-    url: jdbc:h2:mem:devDb
-    username: sa
-    password: ''
+#    url: jdbc:h2:mem:devDb
+#    username: sa
+#    password: ''
+#    schema-generate: CREATE_DROP
+#    driver-class-name: org.h2.Driver
+#    dialect: H2
+    db-type: mysql
+    url: jdbc:mariadb://localhost:3306/db
+    username: root
+    password: root
     schema-generate: CREATE_DROP
-    driver-class-name: org.h2.Driver
-    dialect: H2
+    driver-class-name: org.mariadb.jdbc.Driver
+    dialect: MariaDB
 jpa:
   default:
     entity-scan:
